--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-テスト
+<!doctype html>
+<html>
+
+<head>
+  <meta charset="utf-8">
+  <title>Anontown</title>
+<body>
+  メンテナンス中<br>
+  2017/04/14(金)22:15頃～未定<br>  
+  多分日曜日には再開します<br>
+  <a href="http://jbbs.shitaraba.net/bbs/read.cgi/computer/44495/1492164478/">避難所</a>
+</body>
+</html>
